--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./main.css">
     <title>Document</title>
 </head>
+
 <body>
-    Lorem ipsum dolor sit amet.
-    
+    <div class="container">
+        <h1>Lorem, ipsum dolor.</h1>
+    </div>
 </body>
+
 </html>
